--- a/style.css
+++ b/style.css
@@ -1,1 +1,18 @@
-/*  */
+/* MAQUETA!!! */
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+.main-navbar {
+    height: 50px;
+    width: 100vw;
+    background-color: greenyellow;
+    position: absolute;
+}
+
+.main-presentacion {
+    height: 100vh;
+    background-color: rgb(99, 108, 241);
+}
