--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .main-navbar {
     height: 10%;
-    width: 100vw;
+    width: 100%;
     background-color: rgb(186, 241, 102);
     position: absolute;
 }
